[package]
name = "way-cooler-client-helpers"
description = "Helper library for Way Cooler clients"
version = "0.1.0"
authors = ["Timidger <APragmaticPlace@gmail.com>"]
repository = "https://github.com/way-cooler/way-cooler-client-helpers"
license = "MIT"

[dependencies]
wayland-sys = { version = "^0.9.0", features = ["client", "dlopen"] }
wayland-client = { version = "^0.9.0", features = ["cursor", "dlopen"] }
